--- a/res/layout/page_alarm.xml
+++ b/res/layout/page_alarm.xml
@@ -7,12 +7,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="vertical" >
+
+        <DatePicker
+            android:id="@+id/datePickerAlarm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:datePickerMode="calendar"
+            android:dayOfWeekBackground="@color/inactive_text" />
 
        <TimePicker
-  			android:id="@+id/timePickerAlarm"
-   			android:layout_width="wrap_content"
-   			android:layout_height="wrap_content" /> 
+           android:id="@+id/timePickerAlarm"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content" />
+
+       <Button
+           android:id="@+id/okButton"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:layout_gravity="bottom"
+           android:background="@color/blue"
+           android:text="@string/btnOK" />
+ 
    	</LinearLayout>
 
 </ScrollView>
