--- a/res/layout/page_functions.xml
+++ b/res/layout/page_functions.xml
@@ -172,7 +172,7 @@
                 android:layout_height="wrap_content" >
 
                 <Button
-                    android:id="@+id/btnDanceGangnameStyle"
+                    android:id="@+id/imgNao"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
