ptit menu posey

--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -5,6 +5,8 @@
         <item>Connect</item>
         <item>Hotspot</item>
         <item>NAO Status</item>
+        <item>Alarm Clock</item>
+        <item>Let\'s go yoga</item>
         <item>Speech</item>
         <item>Functions</item>
         <item>LEDs</item>
